--- a/styles/menu.css
+++ b/styles/menu.css
@@ -17,8 +17,8 @@
 }
 
 .main nav{
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 40px;
     padding-top: 100px;
     width: 100%;
     float: left;
@@ -30,18 +30,8 @@
 
 .main #menu {
     display: inline-block;
-    position: absolute;
-    top: 15px;
-    left: calc(50% - 55px);
-    z-index: 2;
-    padding: 10px;
-    background: lightblue;
-}
-
-.main #menu {
-    display: inline-block;
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 40px;
     left: calc(50% - 55px);
     z-index: 2;
     padding: 10px;
@@ -54,9 +44,11 @@
 
 
 #nav-box {
-    z-index: 0;
+    z-index: 1;
     margin: 0px;
-    left: calc(50% - 10px);
-    position: absolute;
+    left: calc(50% - 55px);
+    position: fixed;
+    top: 40px;
+    width: 110px;
 }
 
