--- a/styles/site.css
+++ b/styles/site.css
@@ -1,8 +1,24 @@
+body {
+    min-height: 300px;
+    opacity: 0.8;
+    background: #505060;
+}
+
 .wrapper{
     padding: 0 2em;
     text-align: center;
-
  }
+
+.hide-blocks {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    height: 40px;
+    oppacity: 0.8;
+    background: #505060;
+
+    z-index: 5;
+}
 
 .content, .footer {
     overflow: hidden;
@@ -12,7 +28,6 @@
 }
 
 .content {
-    border: 1px solid black;
     margin-top: 30px;
 }
 
@@ -21,6 +36,7 @@
     /*width: 150px;*/
     height: 300px;
     border: 1px solid black;
+    background: lightgray;
     margin: 0;
 }
 
