--- a/styles/menu.css
+++ b/styles/menu.css
@@ -19,6 +19,7 @@
 .main nav{
     position: fixed;
     top: 40px;
+    left: 40px;
     padding-top: 100px;
     width: 100%;
     float: left;
@@ -34,6 +35,7 @@
     z-index: 2;
     padding: 10px;
     background: lightblue;
+    width: 110px;
 }
 
 .main #menu > h1 {
@@ -48,7 +50,6 @@
     position: fixed;
     top: 40px;
     width: 110px;
-    overflow: hidden;
 }
 
 nav {
@@ -80,7 +81,6 @@ nav a {
     display: block;
     /*padding: 5% 0; */
     color: white;
-    font-size: 5.0vh;
 }
 
 nav a:hover {
