--- a/styles/site.css
+++ b/styles/site.css
@@ -40,6 +40,10 @@ body {
     margin: 0;
 }
 
+.block > h1 {
+    margin-top: 50px;
+}
+
 .footer {
     padding: 10px;
 }
@@ -70,6 +74,14 @@ h2 {
 
 h3 {
     font-size: 1.7rem;
+}
+
+/* position */
+
+.center {
+    position: absolute; top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
