--- a/styles/site.css
+++ b/styles/site.css
@@ -1,12 +1,14 @@
 body {
     min-height: 300px;
-    opacity: 0.8;
-    background: #505060;
+    opacity: 1.0;
+    background: #708090;
+    font-size: 18px;
 }
 
 .wrapper{
     padding: 0 2em;
     text-align: center;
+    opacity: 1;
  }
 
 .hide-blocks {
@@ -15,8 +17,7 @@ body {
     width: 100%;
     height: 40px;
     oppacity: 0.8;
-    background: #505060;
-
+    background: #708090;
     z-index: 5;
 }
 
@@ -33,25 +34,29 @@ body {
 
 .content .block {
     display: inline-block;
-    /*width: 150px;*/
-    height: 270px;
-    border: 1px solid black;
-    background: lightgray;
+    height: 280px;
+    background: #FFF;
     margin: 0;
+    opacity: 1;
 }
 
+/* to amke scrollable with hidden bar need to have parent with over flwo hidden and child with negative padding */
 .block > h1 {
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .footer {
-    padding: 10px;
+    padding: 0;
+    position: relative;
+    top: -10px;
 }
 
 .footer > p {
     float: right;
     margin-right: 20px;
     color: #FFF;
+    padding: 0;
+    margin-top: 0px;
 }
 
 .blank {
@@ -59,11 +64,17 @@ body {
 }
 
 .pattern {
-    background: lightseagreen;
+    background: orange!important;
 }
 
 
 /* TEXT ELEMENTS */
+
+h1, h2, h3,h4, h5, h6 {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    /*font-family: 'Cabin', sans-serif;*/
+}
+
 h1 {
     font-size: 2.7rem;
 }
@@ -76,13 +87,91 @@ h3 {
     font-size: 1.7rem;
 }
 
+h2, h3,h4, h5, h6 {
+    font-style: italic;
+}
 
 /* position */
 
 .center {
-    position: absolute; top: 50%;
+    position: absolute; 
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.round {
+    display: inline-block;
+    width: 80px;
+    border-radius: 50%;
+    padding: 10px;
+    background: #FFF;
+    border: 1px solid #708090;
+    text-align: center;
+}
+
+.round > img {
+    width: 100%;   
+}
+
+/* COLOR SCHEMES */
+
+.wrapper .darkblue {
+    background: #333b7b;
+    color: #FFF;
+}
+
+.wrapper .teal {
+    background: #127486;
+    color: #FFF;
+}
+
+.white {
+    bacground: #FFF;
+}
+
+/* responsive */
+/* 1 panel layout */
+@media (max-width: 767px) {
+    #portfolio-block {
+        background: #333b7b;
+        color:white;
+    }
+}
+
+/* 4 panel layout */ 
+@media (min-width: 1200px) {
+    #portfolio-block {
+        background: #333b7b;
+        color:white;
+    }
+
+}
+
+/* 2 panel layout */
+@media (min-width: 767px) and (max-width: 1200px) {
+
+    #about-block {
+        background-color: #333b7b;
+        color: white;
+    }
+
+    .welcome-block {
+        background-color: #333b7b!important;
+        color: white;
+    }
+
+    #portfolio-block {
+        background: #127486;
+        color:white;
+    }
+
+
+
+    #contact-block {
+        background: #127486;
+        color:white;   
+    }
 }
 
 
