--- a/styles/menu.css
+++ b/styles/menu.css
@@ -2,6 +2,8 @@
     opacity: 0.8;
     background: #708090;
     border-radius: 1px;
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
     box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2);
     margin: 35% 35%;
     width: 32px;
