--- a/styles/site.css
+++ b/styles/site.css
@@ -41,8 +41,25 @@ body {
 }
 
 /* to amke scrollable with hidden bar need to have parent with over flwo hidden and child with negative padding */
-.block > h1 {
+.block {
+    padding: 0px;
+}
+.block  h1 {
     margin-top: 40px;
+}
+
+.block > a {
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    color: #FFF;
+}
+
+.block i {
+    padding: 2px;
+    font-size: 100px;
+    color: inherit;
 }
 
 .footer {
@@ -80,6 +97,7 @@ h1 {
 }
 
 h2 {
+
     font-size: 2.2rem;
 }
 
@@ -103,6 +121,8 @@ h2, h3,h4, h5, h6 {
     display: inline-block;
     width: 80px;
     border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
     padding: 10px;
     background: #FFF;
     border: 1px solid #708090;
@@ -136,6 +156,32 @@ h2, h3,h4, h5, h6 {
 
 .white {
     background: #FFF;
+}
+
+.sliding-middle-out {
+    display: inline-block;
+    position: absolute;
+    bottom: -27px;
+    left: -25%;
+    padding-bottom: 3px;
+    width: 150%;
+    height: 0;
+    margin: 0;
+}
+
+.sliding-middle-out:after {
+    content: '';
+    display: block;
+    margin: auto;
+    height: 3px;
+    width: 0;
+    background: white;
+    transition: width .5s ease, background-color .5s ease;
+}
+
+.block:hover .sliding-middle-out:after {
+    width: 100%;
+    background: white;
 }
 
 /* responsive */
