--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5,15 +5,16 @@ body {
     font-size: 16px;
 }
 
-.wrapper{
+.wrapper {
     padding: 0 2em;
     text-align: center;
     opacity: 1;
- }
+}
 
 .hide-blocks {
     position: fixed;
-    top: 0; left: 0;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 40px;
     oppacity: 0.8;
@@ -40,15 +41,18 @@ body {
     opacity: 1;
 }
 
+
 /* to amke scrollable with hidden bar need to have parent with over flwo hidden and child with negative padding */
+
 .block {
     padding: 0px;
 }
-.block  h1 {
+
+.block h1 {
     margin-top: 40px;
 }
 
-.block > a {
+.block>a {
     text-decoration: none;
     width: 100%;
     height: 100%;
@@ -68,7 +72,7 @@ body {
     top: -10px;
 }
 
-.footer > p {
+.footer>p {
     float: right;
     margin-right: 20px;
     color: #FFF;
@@ -87,8 +91,8 @@ body {
 
 /* TEXT ELEMENTS */
 
-h1, h2, h3,h4, h5, h6 {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     /*font-family: 'Cabin', sans-serif;*/
 }
 
@@ -97,7 +101,6 @@ h1 {
 }
 
 h2 {
-
     font-size: 2.2rem;
 }
 
@@ -105,13 +108,13 @@ h3 {
     font-size: 1.7rem;
 }
 
-h2, h3,h4, h5, h6 {
-}
+h2, h3, h4, h5, h6 {}
+
 
 /* position */
 
 .center {
-    position: absolute; 
+    position: absolute;
     top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -129,9 +132,10 @@ h2, h3,h4, h5, h6 {
     text-align: center;
 }
 
-.round > img {
-    width: 100%;   
+.round>img {
+    width: 100%;
 }
+
 
 /* COLOR SCHEMES */
 
@@ -184,49 +188,47 @@ h2, h3,h4, h5, h6 {
     background: white;
 }
 
+
 /* responsive */
+
+
 /* 1 panel layout */
+
 @media (max-width: 767px) {
     #portfolio-block {
         background: #333b7b;
-        color:white;
+        color: white;
     }
 }
 
-/* 4 panel layout */ 
+
+/* 4 panel layout */
+
 @media (min-width: 1200px) {
     #portfolio-block {
         background: #333b7b;
-        color:white;
+        color: white;
     }
-
 }
 
-/* 2 panel layout */
-@media (min-width: 767px) and (max-width: 1200px) {
 
+/* 2 panel layout */
+
+@media (min-width: 767px) and (max-width: 1200px) {
     #about-block {
         background-color: #333b7b;
         color: white;
     }
-
     .welcome-block {
         background-color: #333b7b!important;
         color: white;
     }
-
     #portfolio-block {
         background: #127486;
-        color:white;
+        color: white;
     }
-
-
-
     #contact-block {
         background: #127486;
-        color:white;   
+        color: white;
     }
 }
-
-
-
