--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -38,7 +38,8 @@ p {
 }
 
 .left-column .heading img {
-    height: 300px;
+    width: 100%;
+    max-width: 400px;
     border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -54,8 +55,12 @@ p {
 }
 
 .right-column h1 {
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 20px;
+    padding: 8px;
+    border-top: 1px solid #999;
+    border-bottom: 1px solid #999;
+    text-align: center;
 }
 
 .right-column .col-xs-12 {
