--- a/public/styles/logo.css
+++ b/public/styles/logo.css
@@ -1,15 +1,15 @@
 .logo h1 {
-	min-width: 240px;
-	margin-top: 0;
+    min-width: 240px;
+    margin-top: 0;
 }
 
-.center {
-    position: absolute; 
+.logo.center {
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .logo img {
-	width: 120px;
+    width: 120px;
 }
