--- a/public/styles/menu.css
+++ b/public/styles/menu.css
@@ -19,9 +19,8 @@
 
 .main nav {
     position: fixed;
-    top: 40px;
+    top: 20px;
     left: 40px;
-    padding-top: 100px;
     width: 100%;
     float: left;
     z-index: 1;
@@ -31,7 +30,6 @@
 .main #menu {
     display: inline-block;
     position: fixed;
-    top: 40px;
     left: calc(50% - 35px);
     z-index: 2;
     color: white;
@@ -40,6 +38,29 @@
     border-top: 40px solid #708090;
     border-left: 35px solid transparent;
     border-right: 35px solid transparent;
+}
+
+.x-icon {
+    display: inline-block;
+    height: 24px;
+    width: 24px;
+    font-size: 24px;
+    padding: 32px;
+    position: absolute;
+    top: -28px;
+    right: 20px;
+    color: #FFF;
+    z-index: 5;
+}
+
+@media (min-width: 768px) {
+    .x-icon {
+        height: 32px;
+        width: 32px;
+        font-size: 32px;
+        top: -16px;
+        right: 46px;
+    }
 }
 
 .main #menu:hover {
@@ -53,23 +74,50 @@
     left: -10px;
 }
 
-#nav-box {
+
+/*#nav-box {
     z-index: 1;
     margin: 0px;
     left: calc(50% - 30px);
     position: fixed;
-    top: 40px;
+    top: 0;
     width: 60px;
-}
+}*/
 
 #nav-box {
     z-index: 1;
     margin: 0px;
     left: calc(50% - 10px);
     position: fixed;
-    top: 40px;
     width: 20px;
     height: 10px;
+}
+
+
+/* GRAY AREA AT TOP */
+
+.hide-blocks {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1em;
+    oppacity: 0.8;
+    background: #708090;
+    z-index: 5;
+}
+
+.main #menu, #nav-box {
+    top: 1.0em;
+}
+
+@media (min-width: 768px) {
+    .hide-blocks {
+        height: 1.5em;
+    }
+    .main #menu, #nav-box {
+        top: 1.5em;
+    }
 }
 
 nav {
@@ -79,7 +127,7 @@ nav {
 nav ul {
     min-height: 400px;
     position: absolute;
-    top: 40px;
+    top: 10px;
     margin-top: 5.0vh;
     display: block;
     width: 100%;
