--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -3,23 +3,21 @@ body {
     opacity: 1.0;
     background: #708090;
     font-size: 16px;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
 }
 
 .wrapper {
-    padding: 0 2em;
+    padding: 0 1em;
     text-align: center;
     opacity: 1;
 }
 
-.hide-blocks {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 40px;
-    oppacity: 0.8;
-    background: #708090;
-    z-index: 5;
+@media (min-width: 768px) {
+    .wrapper {
+        padding: 1.5em;
+    }
 }
 
 .content, .footer {
@@ -30,7 +28,6 @@ body {
 }
 
 .content {
-    margin-top: 30px;
     /*min-width: 420px;*/
 }
 
@@ -49,7 +46,7 @@ body {
 }
 
 .block h1 {
-    margin-top: 40px;
+    margin-top: 55px;
 }
 
 .block>a {
