--- a/public/styles/projects.css
+++ b/public/styles/projects.css
@@ -1,13 +1,19 @@
 .left-column, .right-column {
-    height: 600px;
+    height: 720px;
+    padding: 40px 20px;
     overflow: hidden;
     position: relative;
 }
 
 .project {
-    height: 600px;
+    height: 720px;
     position: relative;
     text-align: center;
+}
+
+img {
+    width: 100%;
+    border: 2px solid #999;
 }
 
 .project p {
@@ -15,14 +21,45 @@
 }
 
 .project .view-site {
+    display: block;
+    margin: 0 0 10px 0;
+    position: relative;
+}
+
+.project .view-site a {
     display: inline-block;
     padding: 4px 30px;
-    color: #FFF;
+    color: #333b7b;
     border: 2px solid #333b7b;
-    margin: -10px 0 10px 0;
-    background: #333b7b;
 
+}
 
+.project .view-site a::after {
+    border-left: 1px solid #333b7b;
+    border-top: 1px solid #333b7b;
+    content: "";
+    height: 9px;
+    margin: 0;
+    position: absolute;
+    right: 13px;
+    top: 11px;
+    -webkit-transform: rotate(136deg);
+    -moz-transform: rotate(136deg);
+    -o-transform: rotate(136deg);
+    -ms-transform: rotate(136deg);
+    transform: rotate(136deg);
+    width: 9px;
+}
+
+.wrapper .left-column {
+    text-align: center;
+}
+
+.left-column .write-up {
+    display: inline-block;
+    margin: auto;
+    width: 100%;
+    max-width: 320px;
 }
 
 .left-column .project {
@@ -68,8 +105,23 @@ h1 {
     border-bottom: 1px solid #999;
     text-align: center;
 }
+
 h2 {
     text-align: center;
-    font-size: 2.7rem;
+    font-size: 28px;
     text-transform: uppercase;
+}
+
+
+@media (min-width: 768px) {
+    .left-column {
+        padding-top: 120px;
+    }
+    .right-column {
+        padding-top: 100px;
+    }
+
+    h2 {
+        font-size: 44px;
+    }
 }
