--- a/public/styles/projects.css
+++ b/public/styles/projects.css
@@ -1,12 +1,13 @@
+
+
 .left-column, .right-column {
-    height: 720px;
+    height: auto;
     padding: 40px 20px;
     overflow: hidden;
     position: relative;
 }
 
 .project {
-    height: 720px;
     position: relative;
     text-align: center;
 }
@@ -53,38 +54,31 @@ img {
 
 .wrapper .left-column {
     text-align: center;
+    padding-top: 65px;
 }
 
 .left-column .write-up {
     display: inline-block;
     margin: auto;
     width: 100%;
-    max-width: 320px;
-}
-
-.left-column .project {
-    top: -600px;
+    max-width: 360px;
 }
 
 .switches {
     position: absolute;
     bottom: 0;
-    right: 0;
+    left: 0%;
     width: 100%;
 }
 
 .switch-up, .switch-down {
-    height: 150px;
+    height: 120px;
     z-index: 5;
     text-align: center;
 }
 
-.switch-up:hover, .switch-down:hover {
-    opacity: 0.8;
-}
-
 .switch-up i, .switch-down i {
-    font-size: 100px;
+    font-size: 90px;
 }
 
 .visible-xs .switch-up,.visible-xs .switch-down {
@@ -95,8 +89,11 @@ img {
     font-size: 70px;
 }
 
+.columns {
+    overflow-y: hidden;
+}
 
-h1 {
+.columns h1 {
     font-size: 16px;
     margin-top: 0;
     margin-bottom: 20px;
@@ -106,22 +103,59 @@ h1 {
     text-align: center;
 }
 
-h2 {
+.columns h2 {
     text-align: center;
     font-size: 28px;
     text-transform: uppercase;
 }
 
+.write-up {
+    padding-bottom: 60px;
+}
 
 @media (min-width: 768px) {
-    .left-column {
-        padding-top: 120px;
+    .columns {
+        height: 620px;
+    }
+    .project {
+        height: 620px;
+    }
+    .left-column .project {
+        top: -620px;
+    }
+    h2 {
+        font-size: 44px;
+    }
+    .columns {
+        height: 620px;
+        overflow-y: hidden;
+    }
+    .wrapper .left-column {
+        text-align: center;
+        padding-top: 125px;
     }
     .right-column {
         padding-top: 100px;
     }
+    .switches {
+        width: 50%;
+        top: 470px;
+        left: 50%;
+    }
+    .switch-up, .switch-down {
+        height: 150px;
+    }
+    .switch-up i, .switch-down i {
+        font-size: 100px;
+    }
 
-    h2 {
-        font-size: 44px;
+    .heading h1 {
+        font-size: 30px;
+        position: absolute;
+        top: 30px;
+        left: 20px;
+        border: none;
+        text-transform: uppercase;
+        color: #333b7b;
     }
 }
